--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -4,15 +4,15 @@
     <title>AirBnB clone</title>
     <link
       rel="stylesheet"
-      href="/AirBnB_clone_o/web_static/styles/3-common.css"
+      href="styles/3-common.css"
     />
     <link
       rel="stylesheet"
-      href="/AirBnB_clone_o/web_static/styles/3-footer.css"
+      href="styles/3-footer.css"
     />
     <link
       rel="stylesheet"
-      href="/AirBnB_clone_o/web_static/styles/3-header.css"
+      href="styles/3-header.css"
     />
     <link rel="shortcut icon" href="images/icon.png" />
   </head>
