--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="styles/3-header.css">
   <link rel="stylesheet" href="styles/3-footer.css">
   <link rel="stylesheet" href="styles/6-filters.css">
+  <link rel="stylesheet" href="styles/7-places.css">
   <link rel="shortcut icon" href="images/icon.png">
 </head>
 <body>
@@ -44,11 +45,23 @@
       </div>
       <button>Search</button>
     </section>
+    <section class="places">
+      <h1>Places</h1>
+      <article>
+        <h2>my home</h2>
+      </article>
+      <article>
+        <h2>Tiny house</h2>
+      </article>
+      <article>
+        <h2>A suite</h2>
+      </article>
+      <!-- Add more articles as needed -->
+    </section>
   </div>
   <footer>
     <p>Best School</p>
   </footer>
 </body>
 </html>
-
 
