--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -2,19 +2,10 @@
 <html lang="en">
   <head>
     <title>AirBnB clone</title>
-    <link
-      rel="stylesheet"
-      href="styles/3-common.css"
-    />
-    <link
-      rel="stylesheet"
-      href="styles/3-footer.css"
-    />
-    <link
-      rel="stylesheet"
-      href="styles/3-header.css"
-    />
-    <link rel="shortcut icon" href="images/icon.png" />
+        <link rel="stylesheet" href="styles/3-common.css">
+        <link rel="stylesheet" href="styles/3-header.css">
+        <link rel="stylesheet" href="styles/3-footer.css">
+        <link rel="shortcut icon" href="images/icon.png">
   </head>
   <body>
     <header></header>
